updated special card and mastheadmini

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -141,6 +141,21 @@ a {
   -o-background-size: cover;
   background-size: contain;
   height: 800px; }
+  .masthead .btn-row {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-left: -40px;
+    margin-top: 500px; }
+    @media (min-width: 750px) {
+      .masthead .btn-row {
+        margin-left: -630px; } }
+  .masthead .video-watch {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    width: 100%; }
   .masthead .intro-body {
     display: flex;
     margin-top: 3px;
@@ -156,13 +171,15 @@ a {
       font-size: 18px; }
   @media (max-width: 750px) {
     .masthead {
-      background: url("../img/stocks/MastHeadmini.jpg") no-repeat center center scroll;
+      background: url("../img/mastheadmini3.jpg") no-repeat center center scroll;
       background-size: contain;
       -webkit-background-size: contain contain;
       -moz-background-size: contain contain;
-      -o-background-size: contain contain;
-      height: 80%;
-      padding: 0; }
+      -o-background-size: cover cover;
+      height: 90%;
+      padding: 0;
+      margin-top: 10px;
+      margin-bottom: 10px; }
       .masthead .intro-body .brand-heading {
         font-size: 0px;
         margin-left: 8px;
@@ -230,8 +247,7 @@ a {
   .photo img {
     height: 380px;
     width: 300px;
-    border-radius: 10px;
-    border: solid 0.7px gray; }
+    border-radius: 10px; }
   .photo p {
     text-align: center;
     margin-top: -30px;
@@ -581,7 +597,7 @@ a {
   background-color: black;
   padding-top: 30px;
   padding-bottom: 30px;
-  margin-bottom: 30px; }
+  margin-bottom: 0px; }
   .special-section h2 {
     font-family: ltc-bodoni-175, serif;
     font-style: normal;
@@ -624,164 +640,93 @@ a {
   margin-left: 50px;
   text-align: center;
   text-wrap: wrap; }
+  .special-about p {
+    font-size: 20px; }
 
 .special-item {
-  width: 300px;
-  height: 500px;
-  background: transparent;
-  margin: auto;
-  padding: 0;
+  width: 270px;
+  height: 560px;
+  margin: 0px;
+  padding: 0px;
+  background-color: transparent;
   position: relative;
   overflow: hidden;
   border-radius: 10px 10px 10px 10px;
   box-shadow: 0;
-  transform: scale(0.95);
-  transition: box-shadow 0.5s, transform 0.5s;
-  border: 0.5px solid gray; }
+  transform: scale(0.96);
+  transition: box-shadow 0.5s, transform 0.5s; }
   .special-item:hover {
-    transform: scale(1);
-    box-shadow: 5px 20px 30px rgba(0, 0, 0, 0.2); }
-  .special-item h2 {
-    text-align: center;
-    font-size: 18px;
+    transform: scale(1); }
+  .special-item .img-fit-cover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: cover;
+    height: 95%;
+    object-fit: cover;
+    border-radius: 10px 10px 10px 10px;
+    margin: 0px; }
+  .special-item .text-section-cover {
+    position: absolute;
+    background-color: black;
     margin: 0;
-    margin-top: -5px;
-    padding-top: 5px;
-    padding-bottom: 0px; }
-  .special-item h1 {
-    color: black;
-    font-style: normal;
-    text-align: center;
-    font-size: 25px;
-    margin-left: 5px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-top: 12px;
-    padding-bottom: 0px; }
-  .special-item p {
-    color: black;
-    text-align: left;
-    font-size: 15px;
-    margin-left: 5px;
-    margin-top: 5px;
-    padding-top: 0px;
-    padding-bottom: 0px; }
-  .special-item .container {
+    padding: 0;
+    opacity: 0.7;
+    top: 72;
+    left: 0;
+    bottom: 0;
+    right: 0;
     width: 100%;
-    height: 100%;
-    margin: 0; }
-    .special-item .container .header {
-      text-align: left; }
-    .special-item .container .top {
-      height: 15%;
-      width: 100%;
-      background-color: transparent;
-      margin-bottom: 5px;
-      -webkit-background-size: 100%;
-      -moz-background-size: 100%;
-      -o-background-size: 100%;
-      background-size: 100%;
-      margin-top: 8px;
-      border-bottom: 0.5px solid gray;
-      border-top: 0.5px solid gray; }
-      .special-item .container .top p {
-        color: black;
+    height: 28%;
+    border-radius: 0px 0px 10px 10px;
+    color: white; }
+    .special-item .text-section-cover h1 {
+      font-size: 30px;
+      padding-top: 10px; }
+    .special-item .text-section-cover p {
+      font-size: 12px;
+      padding-bottom: 0;
+      margin-bottom: 0; }
+    .special-item .text-section-cover .subtitle {
+      margin-top: 0px; }
+      .special-item .text-section-cover .subtitle p {
         text-align: center;
-        font-style: normal;
+        text-wrap: wrap;
         font-size: 15px;
         margin-top: 0px;
-        padding-top: 0px;
-        padding-bottom: 0px; }
-    .special-item .container .body-meisui {
-      height: 65%;
-      width: 100%;
-      opacity: 0.9;
-      background-color: transparent;
-      border-radius: 10px;
-      -webkit-background-size: 100%;
-      -moz-background-size: 100%;
-      -o-background-size: 100%;
-      background-size: cover;
-      margin: 0; }
-    .special-item .container .body-okome {
-      height: 65%;
-      width: 100%;
-      background: url("../img/okome.jpg") no-repeat center center scroll;
-      opacity: 0.9;
-      background-color: transparent;
-      border-radius: 10px;
-      -webkit-background-size: 100%;
-      -moz-background-size: 100%;
-      -o-background-size: 100%;
-      background-size: cover;
-      margin: 0; }
-    .special-item .container .body-kuramoto {
-      height: 65%;
-      width: 100%;
-      opacity: 0.9;
-      background: url("../img/toji.jpg") no-repeat right center scroll;
-      background-color: transparent;
-      border-radius: 10px;
-      -webkit-background-size: 100%;
-      -moz-background-size: 100%;
-      -o-background-size: 100%;
-      background-size: cover;
-      margin: 0; }
-    .special-item .container .body-design {
-      height: 65%;
-      width: 100%;
-      opacity: 0.9;
-      background: url("../img/design2.jpg") no-repeat center center scroll;
-      background-color: transparent;
-      border-radius: 10px;
-      -webkit-background-size: 100%;
-      -moz-background-size: 100%;
-      -o-background-size: 100%;
-      background-size: cover;
-      margin: 0; }
-    .special-item .container .photo {
-      width: 30%;
-      height: 30%; }
-      .special-item .container .photo .icon {
-        position: absolute;
-        right: 130px;
-        top: 240px;
-        color: black;
-        opacity: 1; }
-        .special-item .container .photo .icon a:visited {
-          color: white; }
-    .special-item .container .bottom {
-      height: 10%;
-      width: 100%;
-      background-color: transparent;
-      margin-top: 0px;
-      margin-bottom: -5px; }
-      .special-item .container .bottom p {
-        color: black;
-        text-align: left;
-        line-height: 95%;
-        font-size: 13px;
-        margin-left: 5px;
-        margin-top: 10px;
-        margin-bottom: 0px;
-        padding-top: 0px;
-        padding-bottom: 0px; }
-    .special-item .container .footer {
-      height: 5%;
-      width: 100%;
-      background-color: transparent;
-      margin-top: -10px;
-      margin-bottom: 0px;
-      padding-top: 0px; }
-      .special-item .container .footer p {
-        color: black;
+        padding-top: 0px; }
+    .special-item .text-section-cover .description {
+      margin-bottom: 5px; }
+      .special-item .text-section-cover .description p {
         text-align: center;
-        font-size: 12px;
-        margin-left: 5px;
-        margin-top: 10px;
+        margin-bottom: 5px;
+        text-wrap: wrap;
+        font-size: 10px;
         padding-top: 0px;
-        margin-bottom: 0px;
-        padding-bottom: 5px; }
+        margin-right: 5px;
+        margin-left: 5px; }
+  .special-item .footer {
+    position: absolute;
+    background-color: white;
+    opacity: 0.9;
+    align-items: center;
+    border-radius: 0px 0px 10px 10px;
+    margin: 0;
+    padding: 0;
+    top: 98;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 2%;
+    object-fit: cover; }
+    .special-item .footer p {
+      color: black;
+      font-size: 8px;
+      padding-bottom: 0px;
+      margin-bottom: 3px; }
 
 .download-section {
   color: black;
@@ -791,7 +736,7 @@ a {
   padding-top: 20px;
   padding-bottom: 20px;
   height: auto;
-  margin-bottom: 0px;
+  margin-bottom: -10px;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -907,10 +852,26 @@ a {
   border: 1px solid black;
   background-color: transparent; }
   .btn-default:focus, .btn-default:hover {
-    color: red;
-    border: 1px solid red;
+    color: white;
+    border: 1px solid white;
     outline: none;
-    background-color: none; }
+    background-color: black; }
+
+.btn-video {
+  color: gray;
+  font-family: ltc-bodoni-175, serif;
+  font-style: normal;
+  font-weight: 200;
+  border: 1px solid black;
+  background-color: black;
+  border-radius: 10px;
+  opacity: 0.9; }
+  .btn-video:focus, .btn-video:hover {
+    color: black;
+    border: 1px solid white;
+    outline: none;
+    background-color: white;
+    opacity: 0.7; }
 
 .btn-modal {
   margin-left: 35px;
@@ -921,10 +882,10 @@ a {
   border: 1px solid white;
   background-color: transparent; }
   .btn-modal:focus, .btn-modal:hover {
-    color: red;
-    border: 1px solid red;
+    color: black;
+    border: 1px solid none;
     outline: none;
-    background-color: none; }
+    background-color: white; }
 
 .btn-social {
   font-family: ltc-bodoni-175, serif;
@@ -936,10 +897,10 @@ a {
   margin-top: 10px;
   background-color: transparent; }
   .btn-social:focus, .btn-social:hover {
-    color: red;
-    border: 1px solid red;
+    color: white;
+    border: 1px solid white;
     outline: none;
-    background-color: none; }
+    background-color: black; }
 
 ul.banner-social-buttons {
   margin-top: 10px; }
