--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -182,6 +182,23 @@ a {
   -o-background-size: cover;
   background-size: contain;
   height:800px;
+  .btn-row {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-left: -40px;
+    margin-top: 500px;
+    @media(min-width:750px){
+      margin-left: -630px;
+    }
+  }
+  .video-watch {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
 
   .intro-body {
     display: flex;
@@ -202,13 +219,15 @@ a {
     }
   }
   @media(max-width:750px) {
-    background: url('../img/stocks/MastHeadmini.jpg') no-repeat center center scroll;
+    background: url('../img/mastheadmini3.jpg') no-repeat center center scroll;
     background-size: contain;
     -webkit-background-size: contain contain ;
     -moz-background-size: contain contain ;
-    -o-background-size: contain contain;
-    height: 80%;
+    -o-background-size: cover cover;
+    height: 90%;
     padding: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
     .intro-body {
       .brand-heading {
         font-size: 0px;
@@ -293,7 +312,6 @@ a {
     height:380px;
     width: 300px;
     border-radius: 10px;
-    border: solid 0.7px gray;
 
   }
   p {
@@ -715,7 +733,7 @@ a {
   background-color: black;
   padding-top: 30px;
   padding-bottom: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 0px;
   h2 {
     font-family: ltc-bodoni-175, serif;
     font-style: normal;
@@ -762,184 +780,106 @@ a {
   margin-left:50px;
   text-align: center;
   text-wrap:wrap;
+  p {
+    font-size: 20px;
+  }
 }
 
 .special-item {
-  width: 300px;
-  height: 500px;
-  background: transparent;
-  margin: auto;
-  padding: 0;
+  width: 270px;
+  height: 560px;
+  margin: 0px;
+  padding: 0px;
+  background-color: transparent;
   position: relative;
   overflow: hidden;
   border-radius: 10px 10px 10px 10px;
   box-shadow: 0;
-  transform: scale(0.95);
+  transform: scale(0.96);
   transition: box-shadow 0.5s, transform 0.5s;
-  border: 0.5px solid gray;
   &:hover{
     transform: scale(1);
-    box-shadow: 5px 20px 30px rgba(0,0,0,0.2);
   }
-  h2 {
-    text-align: center;
-    font-size: 18px;
-    margin:0;
-    margin-top: -5px;
-    padding-top:5px;
-    padding-bottom:0px;
+  .img-fit-cover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom:0;
+    right:0;
+    width: cover;
+    height: 95%;
+    object-fit: cover;
+    border-radius: 10px 10px 10px 10px;
+    margin: 0px;
   }
-  h1 {
-    color:black;
-    font-style: normal;
-    text-align: center;
-    font-size: 25px;
-    margin-left: 5px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-top:12px;
-    padding-bottom:0px;
-  }
-  p {
-    color: black;
-    text-align: left;
-    font-size: 15px;
-    margin-left: 5px;
-    margin-top: 5px;
-    padding-top:0px;
-    padding-bottom:0px;
-  }
-  .container {
-    width:100%;
-    height:100%;
+  .text-section-cover {
+    position: absolute;
+    background-color: black;
     margin: 0;
-    .header {
-      text-align: left;
+    padding: 0;
+    opacity: 0.7;
+    top: 72;
+    left: 0;
+    bottom:0;
+    right:0;
+    width: 100%;
+    height: 28%;
+    border-radius: 0px 0px 10px 10px;
+    color: white;
+    h1 {
+      font-size: 30px;
+      padding-top: 10px;
     }
-    .top {
-      height: 15%;
-      width:100%;
-      background-color: transparent;
-      margin-bottom: 5px;
-      -webkit-background-size: 100%;
-      -moz-background-size: 100%;
-      -o-background-size: 100%;
-      background-size: 100%;
-      margin-top: 8px;
-      border-bottom: 0.5px solid gray;
-      border-top: 0.5px solid gray;
+    p {
+      font-size: 12px;
+      padding-bottom: 0;
+      margin-bottom: 0;
+
+    }
+    .subtitle {
+      margin-top: 0px;
       p {
-        color: black;
         text-align: center;
-        font-style: normal;
+        text-wrap:wrap;
         font-size: 15px;
         margin-top: 0px;
-        padding-top:0px;
-        padding-bottom:0px;
+        padding-top: 0px;
       }
     }
-    .body-meisui {
-      height: 65%;
-      width:100%;
-      // background: url("../img/meisui.jpg")no-repeat center center scroll;
-      opacity: 0.9;
-      background-color: transparent;
-      border-radius: 10px;
-      -webkit-background-size: 100%;
-      -moz-background-size: 100%;
-      -o-background-size: 100%;
-      background-size: cover;
-      margin: 0;
-    }
-    .body-okome {
-      height: 65%;
-      width:100%;
-      background: url("../img/okome.jpg")no-repeat center center scroll;
-      opacity: 0.9;
-      background-color: transparent;
-      border-radius: 10px;
-      -webkit-background-size: 100%;
-      -moz-background-size: 100%;
-      -o-background-size: 100%;
-      background-size: cover;
-      margin: 0;
-    }
-    .body-kuramoto {
-      height: 65%;
-      width:100%;
-      opacity: 0.9;
-      background: url("../img/toji.jpg")no-repeat right center scroll;
-      background-color: transparent;
-      border-radius: 10px;
-      -webkit-background-size: 100%;
-      -moz-background-size: 100%;
-      -o-background-size: 100%;
-      background-size: cover;
-      margin: 0;
-    }
-    .body-design {
-      height: 65%;
-      width:100%;
-      opacity: 0.9;
-      background: url("../img/design2.jpg")no-repeat center center scroll;
-      background-color: transparent;
-      border-radius: 10px;
-      -webkit-background-size: 100%;
-      -moz-background-size: 100%;
-      -o-background-size: 100%;
-      background-size: cover;
-      margin: 0;
-    }
-    .photo {
-      width: 30%;
-      height: 30%;
-      .icon {
-        position:absolute;
-        right:130px;
-        top:240px;
-        color:black;
-        opacity: 1;
-        a:visited {
-          color: white;
-        }
-      }
-    }
-    .bottom {
-      height: 10%;
-      width:100%;
-      background-color: transparent;
-      margin-top: 0px;
-      margin-bottom: -5px;
+    .description {
+      margin-bottom: 5px;
       p {
-        color: black;
-        text-align: left;
-        line-height: 95%;
-        font-size: 13px;
+      text-align: center;
+      margin-bottom: 5px;
+      text-wrap:wrap;
+      font-size: 10px;
+      padding-top: 0px;
+      margin-right: 5px;
         margin-left: 5px;
-        margin-top: 10px;
-        margin-bottom: 0px;
-        padding-top:0px;
-        padding-bottom:0px;
         }
       }
-    .footer {
-    height: 5%;
-    width:100%;
-    background-color: transparent;
-    margin-top: -10px;
-    margin-bottom: 0px;
-    padding-top: 0px;
-    // border-top: 0.5px solid black;
+
+  }
+  .footer {
+    position: absolute;
+    background-color: white;
+    opacity: 0.9;
+    align-items: center;
+    border-radius: 0px 0px 10px 10px;
+    margin: 0;
+    padding: 0;
+    top: 98;
+    left: 0;
+    bottom:0;
+    right:0;
+    width: 100%;
+    height: 2%;
+    object-fit: cover;
     p {
-      color: black;
-      text-align: center;
-      font-size: 12px;
-      margin-left: 5px;
-      margin-top: 10px;
-      padding-top:0px;
-      margin-bottom: 0px;
-      padding-bottom:5px;
-      }
+      color:black;
+      font-size: 8px;
+      padding-bottom: 0px;
+      margin-bottom: 3px;
     }
   }
 }
@@ -954,7 +894,7 @@ a {
   padding-top: 20px;
   padding-bottom: 20px;
   height: auto;
-  margin-bottom: 0px;
+  margin-bottom: -10px;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -1095,10 +1035,28 @@ a {
   background-color: transparent;
   &:focus,
   &:hover {
-    color: red;
-    border: 1px solid red;
+    color: white;
+    border: 1px solid white;
     outline: none;
-    background-color: none;
+    background-color: black;
+  }
+}
+.btn-video {
+  color: gray;
+  font-family: ltc-bodoni-175, serif;
+  font-style: normal;
+  font-weight: 200;
+  border: 1px solid black;
+  background-color: black;
+  border-radius: 10px;
+  opacity: 0.9;
+  &:focus,
+  &:hover {
+    color: black;
+    border: 1px solid white;
+    outline: none;
+    background-color: white;
+    opacity: 0.7;
   }
 }
 .btn-modal {
@@ -1111,10 +1069,10 @@ a {
   background-color: transparent;
   &:focus,
   &:hover {
-    color: red;
-    border: 1px solid red;
+    color: black;
+    border: 1px solid none;
     outline: none;
-    background-color: none;
+    background-color: white;
   }
 }
 
@@ -1129,10 +1087,10 @@ a {
   background-color: transparent;
   &:focus,
   &:hover {
-    color: red;
-    border: 1px solid red;
+    color: white;
+    border: 1px solid white;
     outline: none;
-    background-color: none;
+    background-color: black;
   }
 }
 
