--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -662,6 +662,7 @@ a {
   max-width: 375px;
   background-color: transparent;
   border-radius: 20px;
+  -webkit-overflow-scrolling: touch;
   p {
     font-size: 10px;
   }
@@ -669,7 +670,7 @@ a {
 
 .modal-contents {
   background-color: transparent;
-  margin-top: 180px;
+  margin-top: 120px;
   max-width: 320px;
   margin-left: 10px;
   padding-left: 50px;
