--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -175,7 +175,7 @@ a {
 
   color: black;
 
-  background: url('../img/MastHead.png') no-repeat center center scroll;
+  background: url('../img/compressed/MastHead-min.png') no-repeat center center scroll;
   background-color: white;
   -webkit-background-size: cover ;
   -moz-background-size: cover ;
@@ -219,7 +219,7 @@ a {
     }
   }
   @media(max-width:750px) {
-    background: url('../img/mastheadmini3.jpg') no-repeat center center scroll;
+    background: url('../img/compressed/mastheadmini3-min.jpg') no-repeat center center scroll;
     background-size: contain;
     -webkit-background-size: contain contain ;
     -moz-background-size: contain contain ;
@@ -436,7 +436,7 @@ a {
     .top-chiyogiku {
       height: 80%;
       width:100%;
-      background: url("../img/stocks/yawara-chiyonogiku") no-repeat center center;
+      background: url("../img/compressed/yawara-chiyonogiku") no-repeat center center;
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
@@ -447,7 +447,7 @@ a {
     .top-chiyogiku {
       height: 80%;
       width:100%;
-      background: url("../img/stocks/yawara-chiyonogiku.jpg") no-repeat center center;
+      background: url("../img/compressed/yawara-chiyonogiku-min.jpg") no-repeat center center;
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
@@ -457,7 +457,7 @@ a {
     .top-chigonoiwa {
       height: 80%;
       width:100%;
-      background: url("../img/stocks/yawara-chigonoiwa.jpg") no-repeat center center;
+      background: url("../img/compressed/yawara-chigonoiwa-min.jpg") no-repeat center center;
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
@@ -467,7 +467,7 @@ a {
     .top-hananomai {
       height: 80%;
       width:100%;
-      background: url("../img/stocks/yawara-hananomai.jpg") no-repeat center center;
+      background: url("../img/compressed/yawara-hananomai-min.jpg") no-repeat center center;
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
@@ -477,7 +477,7 @@ a {
     .top-iwamura {
       height: 80%;
       width:100%;
-      background: url("../img/stocks/yawara-iwamura.jpg") no-repeat center center;
+      background: url("../img/compressed/yawara-iwamura-min.jpg") no-repeat center center;
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
@@ -487,7 +487,7 @@ a {
     .top-komachi {
       height: 80%;
       width:100%;
-      background: url("../img/stocks/yawara-komachi.jpg") no-repeat center center;
+      background: url("../img/compressed/yawara-komachi-min.jpg") no-repeat center center;
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
@@ -497,7 +497,7 @@ a {
     .top-yamada {
       height: 80%;
       width:100%;
-      background: url("../img/stocks/yawara-yamada.jpg") no-repeat center center;
+      background: url("../img/compressed/yawara-yamada-min.jpg") no-repeat center center;
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
@@ -507,7 +507,7 @@ a {
     .top-tenryo {
       height: 80%;
       width:100%;
-      background: url("../img/stocks/waza-tenryo.jpg") no-repeat center center;
+      background: url("../img/compressed/waza-tenryo-min.jpg") no-repeat center center;
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
@@ -517,7 +517,7 @@ a {
     .top-chiyonogikuwaza {
       height: 80%;
       width:100%;
-      background: url("../img/stocks/waza-chiyonogiku.jpg") no-repeat center center;
+      background: url("../img/compressed/waza-chiyonogiku-min.jpg") no-repeat center center;
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
@@ -527,7 +527,7 @@ a {
     .top-yamadawaza {
       height: 80%;
       width:100%;
-      background: url("../img/stocks/waza-yamada.jpg") no-repeat center center;
+      background: url("../img/compressed/waza-yamada-min.jpg") no-repeat center center;
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
@@ -722,7 +722,7 @@ a {
 //ここからspecialセクション
 
 .special-section {
-  background: url('../img/kuramoto.jpg') no-repeat center center scroll;
+  background: url('../img/compressed/kuramoto-min.jpg') no-repeat center center scroll;
   height: auto;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -890,7 +890,7 @@ a {
 .download-section {
   color: black;
   display: flex;
-  background: url('../img/pre_waza-main.jpg') no-repeat center center scroll;
+  background: url('../img/compressed/pre_waza-main-min.jpg') no-repeat center center scroll;
   background-color: transparent;
   padding-top: 20px;
   padding-bottom: 20px;
