--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -541,13 +541,14 @@ a {
   max-width: 375px;
   background-color: transparent;
   border-radius: 20px;
-  -webkit-overflow-scrolling: touch; }
+  -webkit-overflow-scrolling: touch;
+  overflow: auto; }
   .product-modal p {
     font-size: 10px; }
 
 .modal-contents {
   background-color: transparent;
-  margin-top: 120px;
+  margin-top: 80px;
   max-width: 320px;
   margin-left: 10px;
   padding-left: 50px; }
