--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -134,7 +134,7 @@ a {
   padding-top: 10px;
   margin-bottom: 30px;
   color: black;
-  background: url("../img/compressed/MastHead-min.png") no-repeat center center scroll;
+  background: url("../img/compressed/MastHead-min.jpg") no-repeat center center scroll;
   background-color: white;
   -webkit-background-size: cover;
   -moz-background-size: cover;
