--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -175,7 +175,7 @@ a {
 
   color: black;
 
-  background: url('../img/compressed/MastHead-min.png') no-repeat center center scroll;
+  background: url('../img/compressed/MastHead-min.jpg') no-repeat center center scroll;
   background-color: white;
   -webkit-background-size: cover ;
   -moz-background-size: cover ;
