--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -71,7 +71,7 @@ p {
   letter-spacing: 0.5px;
 
   margin: 0 0 25px;
-  @media(min-width: 768px) {
+  @media(min-width: 481px) {
     font-size: 18px;
     line-height: 1.6;
 
@@ -137,7 +137,7 @@ a {
       }
     }
   }
-  @media(min-width:992px) {
+  @media(min-width:480px) {
     padding-top: 20px;
     padding-bottom: 20px;
     -webkit-transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
@@ -189,7 +189,7 @@ a {
     align-items: center;
     margin-left: -40px;
     margin-top: 500px;
-    @media(min-width:750px){
+    @media(min-width:481px){
       margin-left: -630px;
     }
   }
@@ -212,13 +212,16 @@ a {
       border: white;
       margin-left: 8px;
       margin-top: 20px;
+      @media(max-width:768px){
+        font-size: 60px;
+      }
     }
     .intro-text {
       font-size: 18px;
 
     }
   }
-  @media(max-width:750px) {
+  @media(max-width:480px) {
     background: url('../img/compressed/mastheadmini3-min.jpg') no-repeat center center scroll;
     background-size: contain;
     -webkit-background-size: contain contain ;
@@ -595,7 +598,7 @@ a {
         color: white;
       }
     }
-    @media(min-width:992px) {
+    @media(min-width:801px) {
     &:hover {
       width:100%;
       right:0;
@@ -949,7 +952,7 @@ a {
       width: cover;
     }
   }
-  @media(max-width:750px) {
+  @media(max-width:480px) {
     h2 {
       font-size: 30px;
     }
@@ -1004,7 +1007,7 @@ a {
   width: 100%;
   height: 300px;
 }
-@media(min-width:992px) {
+@media(min-width:481px) {
   .content-section {
     padding-top: 100px;
     padding-bottom: 100px;
@@ -1098,10 +1101,10 @@ a {
 
 ul.banner-social-buttons {
   margin-top: 10px;
-  @media(max-width: 1199px) {
+  @media(max-width: 800px) {
     margin-top: 15px;
   }
-  @media(max-width:767px) {
+  @media(max-width:480px) {
     li {
       display: block;
       margin-top: 10px;
